<resources>
    <string name="app_name">Aced</string>
    <string name="textoInicial">Vamos começar a relaxar!</string>
    <string name="titulo">Aced</string>
    <string name="btnEntrar">Entrar</string>
    <string name="btnCadastrar">Criar uma conta</string>
    <string name="bem_vindo">Bem-vindo(a) de volta!</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="bem_vindo_cad">Olá, seja bem-vindo</string>
    <string name="nome">Nome</string>
    <string name="btnCad">Cadastrar</string>
    <string name="perfil">Perfil</string>
    <string name="outros">Outros</string>
    <string name="Configuracoes">Configurações</string>
    <string name="pedidos">Pedidos</string>
    <string name="inbox">inbox</string>
    <string name="cole_o">Coleção</string>
    <string name="notifica_es">Notificações</string>
    <string name="suporte">Suporte</string>
    <string name="meu_perfil">Meu Perfil</string>
    <string name="minha_atividade">Minha Atividade</string>
    <string name="sobre_n_s">Sobre nós</string>
    <string name="contate_nos">Contate-nos</string>
    <string name="configura_es">Configurações</string>
    <string name="sair">Sair</string>
    <string name="informa_es">Informações</string>
    <string name="aced">Aced</string>
    <string name="verificado">Verificado</string>
    <string name="ola">Olá,</string>
    <string name="calendar">Calendário</string>
    <string name="sons">Sons</string>
    <string name="notas">Notas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="musicas">Musicas</string>
    <string name="inicio">Inicio</string>
    <string name="voltar">voltar</string>
    <string name="agoto_2022">Novembro 2022</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="foward"><![CDATA[->]]></string>
    <string name="adicionar_texto">Adicionar texto</string>
    <string name="relatar_crise">Relatar crise</string>
    <string name="digite_o_motivo_da_crise">Digite o motivo da crise</string>
    <string name="low">Baixa</string>
    <string name="medium">Médio</string>
    <string name="high">Alta</string>
    <string name="salvar">Salvar</string>
    <string name="relatorios">Meus relatórios</string>
    <string name="Relatórios">Relatórios</string>
    <string name="tudo_bem">Está tudo bem?</string>
    <string name="conte_nos_o_que_est">Conte-nos o que está</string>
    <string name="acontecendo">acontecendo!</string>
    <string name="registre_sua_crise">Registre sua crise</string>
    <string name="primeiro_passo">Primeiro Passo</string>
    <string name="quando_come_ou_a_crise">Quando começou a crise?</string>
    <string name="qual_a_intensidade">Qual a intensidade?</string>
    <string name="intensidade_fraca">Fraco</string>
    <string name="Moderado">Moderado</string>
    <string name="Forte">Forte</string>
    <string name="Extremo">Extremo</string>
    <string name="quando_a_crise_terminou">Quando a crise terminou?</string>
    <string name="ainda_n_o_acabou">Ainda não acabou</string>
    <string name="pr_ximo">Próximo</string>
    <string name="segundo_passo">Segundo Passo</string>
    <string name="onde_voc_est_estava">Onde você está/estava?</string>
    <string name="sua_casa">Sua casa</string>
    <string name="trabalho">Trabalho</string>
    <string name="escola">Escola</string>
    <string name="festa">Festa</string>
    <string name="cada_de_outra_pessoa">Casa de outra pessoa</string>
    <string name="outro">Outro...</string>
    <string name="sim">Sim</string>
    <string name="n_o">Não</string>
    <string name="terceiro_passo">Terceiro Passo</string>
    <string name="voc_sabe_os_poss_veis_gatilhos">Você sabe os possíveis gatilhos?</string>
    <string name="problemas_familiares">Problemas familiares</string>
    <string name="problemas_no_trabalho_escola">Problemas no trabalho/escola</string>
    <string name="preocupa_o_com_algum_evento_importante">Preocupação com algum evento importante</string>
    <string name="relacionamentos">Relacionamentos</string>
    <string name="pensar_demais">Pensar demais</string>
    <string name="quarto_passo">Quarto Passo</string>
    <string name="o_que_voc_sentiu">O que você sentiu?</string>
    <string name="agita_o">Agitação</string>
    <string name="fome_compulsiva">Fome compulsiva</string>
    <string name="estresse">Estresse</string>
    <string name="falta_de_ar">Falta de ar</string>
    <string name="vontade_de_chorar">Vontade de chorar</string>
    <string name="cora_o_acelerado">Coração acelerado</string>
    <string name="voc_tomou_algum_rem_dio">Você tomou algum remédio?</string>
    <string name="suas_notas">Suas notas:</string>
    <string name="_27_08_2022">27-08-2022</string>
    <string name="comece_a_escrever">Comece a escrever...</string>
    <string name="data">27-08-2022</string>
    <string name="di_ro">Diário</string>
    <string name="textoCrise">Sua crise foi registrada, para ter \n acesso ao relatório, basta clicar \n no botão abaixo ou ir até o Feed.</string>
    <string name="gerar_pdf">Gerar PDF</string>
    <string name="textoSobre">TCC de três amigos que resolveram \n criar um aplicativo que ajudasse \n pessoas que têm ansiedade.</string>
    <string name="textoSobreDois">Graças ao projeto, aprendemos \n sobre banco de dados, criação de \n aplicativos, técnicas de design, \n mas principalmente trabalho em \n equipe! </string>
    <string name="title_activity_teste">Teste</string>
    <string name="action_settings">Settings</string>


    <string name="hello_world">Hello world!</string>
    <!-- -
        This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>