<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_com_contorno"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_marginTop="535dp"
        android:background="@color/fundoUm">

        <TextView
            android:id="@+id/tituloACED"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="20dp"
            android:text="@string/titulo"
            android:textColor="@color/titulo_aced"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tituloACED"
            android:layout_marginStart="27dp"
            android:layout_marginTop="5dp"
            android:text="@string/textoInicial"
            android:textColor="@color/titulo_aced"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnEntrar"
            style="@style/buttonEntrar"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="120dp"
            android:onClick="btnEnt"
            android:text="@string/btnEntrar"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnCadastrar"
            style="@style/buttonCadastro"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnEntrar"
            android:layout_marginStart="17dp"
            android:layout_marginTop="20dp"
            android:onClick="btnCad"
            android:text="@string/btnCadastrar"
            android:textAllCaps="false"
            android:textColor="@color/titulo_aced"
            android:textSize="18sp" />

    </RelativeLayout>

</androidx.appcompat.widget.LinearLayoutCompat>