<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/blue">

    <RelativeLayout
        android:layout_width="500dp"
        android:layout_height="560dp"
        android:background="@color/fundoMenuUm"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/oi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:text="@string/ola"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/textoNome"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="61dp"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginStart="90dp"
                android:layout_marginTop="295dp"
                android:background="@color/white" />

            <View
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="285dp"
                android:background="@color/white" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageProfile"
                android:layout_width="210dp"
                android:layout_height="190dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="145dp"
                android:scaleType="centerCrop"
                android:src="@drawable/fotomenu"/>

            <ImageView
                android:id="@+id/circulo"
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="125dp"
                android:src="@drawable/roda" />

            <LinearLayout
                android:id="@+id/trocarFoto"
                style="@style/fotoMenu_dois"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="180dp"
                android:layout_marginTop="285dp">

                <ImageView
                    android:id="@+id/foto"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_foto" />

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/meu_perfil"
            android:layout_width="410dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="390dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="27dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_baseline_person_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/meu_perfil"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/minha_atividade"
            android:layout_width="410dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="450dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="27dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_baseline_access_time_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/Relatórios"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="410dp"
            android:layout_height="310dp"
            android:layout_marginTop="520dp"
            android:background="@color/fundoMenuDois">

            <RelativeLayout
                android:id="@+id/sobre_nos"
                android:layout_width="415dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/sobre_n_s"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/contate_nos"
                android:layout_width="410dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/sobre_nos"
                android:layout_marginTop="35dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/contate_nos"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/configuracoes"
                android:layout_width="410dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/contate_nos"
                android:layout_marginTop="35dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/Configuracoes"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/sairMenu"
                android:layout_width="410dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/configuracoes"
                android:layout_marginTop="35dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/sair"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>